# bacteria-1

./: .gitignore  .gitmodules  Makefile  Makefile.am  README  README.md  config.h  config.h.in  config.status  configure  configure.ac
libbacteria/: Makefile.am  cryptocoins.c  cryptocoins.h  json_rpc.c  json_rpc.h
libbacteria/encdec/: AES.h  x25519.h
libbacteria/encdec/async/: x25519.c
libbacteria/encdec/sync/: AES.c  AES.h
libbacteria/lua/: afirst.c  libcrypto.c  libcrypto.h  libencdec.c  libencdec.h  libjson.c  libjson.h  lua.h
src/: Makefile  Makefile.am  async_serv.c  bacteria  cryptocoins.ini  main.c  signal_handler.c
src/.deps/: json_rpc.Po
src/assets/lua/: Makefile  afirst.c  check.lua  intepretator  libcrypto.c  lua.h
src/luasubmodules/: bacteria.lua  bencdec.lua  check.lua  init.lua
